# airjedi-desktop

./: .gitignore  CLAUDE.md  CODE_QUALITY_REVIEW.md  CROSS_COMPILE.md  Cargo.toml  Cross.toml  LICENSE  README.md  RUST_IMPROVEMENTS_PLAN.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/adsb-client/: Cargo.toml
crates/adsb-client/src/: lib.rs
crates/adsb-client/src/protocol/: basestation.rs  mod.rs
crates/adsb-client/src/tcp/: mod.rs
crates/adsb-client/src/tracker/: mod.rs
data/: README.md
docs/plans/: 2025-11-29-adsb-client-library-design.md  2025-12-24-weather-layer-design.md  2025-12-24-weather-layer-implementation.md
src/: adsb.rs  aircraft_db.rs  aircraft_metadata.rs  aircraft_types.rs  aviation_data.rs  basestation.rs  carto_tiles.rs  config.rs  connection_manager.rs  main.rs  photo_cache.rs  status.rs  status_pane.rs  tcp_client.rs  tiles.rs  video_manager.rs  video_player.rs  video_protocol.rs
src/aircraft/: metadata.rs  mod.rs  tracker.rs
src/aviation/: data.rs  mod.rs
src/map/: mod.rs  tiles.rs
src/media/: mod.rs  photo_cache.rs
src/network/: connection_manager.rs  mod.rs  tcp_client.rs
src/sdr/: complex_to_mag.rs  iq_processor.rs  mod.rs  rtlsdr_source.rs  waterfall_sink.rs  wav_source.rs
src/status/: mod.rs
src/ui/: mod.rs  status_pane.rs  waterfall_window.rs
src/video/: manager.rs  mod.rs  player.rs
src/weather/: mod.rs  openweathermap.rs
