[package]
name = "airjedi-desktop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Chris Custine <124975+ccustine@users.noreply.github.com>"]

[dependencies]
eframe = "0.32"
egui = "0.32"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
image = "0.25"
sha2 = "0.10"
dirs = "5.0"
flate2 = "1.0"
lazy_static = "1.4"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
confy = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-location = "0.3"
objc2-foundation = "0.3"

[profile.release]
#debug = true  # Enable debug symbols for profiling while keeping optimizations
