[package]
name = "airjedi-desktop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Chris Custine <124975+ccustine@users.noreply.github.com>"]

[lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Restriction lints for better code quality
allow_attributes_without_reason = "warn"
undocumented_unsafe_blocks = "warn"
map_err_ignore = "warn"
string_to_string = "warn"

# Opt-out of pedantic lints that don't fit this codebase
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[dependencies]
eframe = { version = "0.33", features = ["wgpu", "glow"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["svg", "image"] }
usvg = "0.45"
resvg = "0.45"
walkers = "0.47.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
image = "0.25"
sha2 = "0.10"
dirs = "5.0"
flate2 = "1.0"
lazy_static = "1.4"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
confy = "0.6"
webbrowser = "1.0.6"
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio-util = "0.7"
mimalloc = "0.1"
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-app = "0.23"
futuresdr = "0.0.29"
egui_plot = "0.33"
ringbuf = "0.3"
rfd = "0.15"
rtlsdr = { version = "0.1", optional = true }
rustfft = "6.1"
num-complex = "0.4"
hound = "3.5"

[features]
default = []
hardware = ["rtlsdr"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-location = "0.3"
objc2-foundation = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
#opt-level = 'z' # only have smaller size after strip
rpath = true

[package.metadata.bundle]
name = "AirJedi Desktop"
identifier = "com.airjedi.airjedidesktop"
icon = ["assets/airjedi.svg"]
osx_minimum_system_version = "10.14"
